--- a/mu-template/trunk/after/template/xslt/for-each.template
+++ b/mu-template/trunk/after/template/xslt/for-each.template
@@ -4,8 +4,8 @@ VimL:" hint: <xsl:for-each select="XPath"></xsl:for-each>
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1 
-VimL: let s:marker_open  = '<+'
-VimL: let s:marker_close = '+>'
-<xsl:for-each select="<+XPath+>">
-<++>
-</xsl:for-each>
+VimL: let s:marker_open  = '{+'
+VimL: let s:marker_close = '+}'
+<xsl:for-each select="¡substitute(s:Surround(2, '{+XPath+}'), '^\_s*\|\_s*$', '', 'g')¡">
+  ¡s:Surround(1, '{+code+}')¡
+</xsl:for-each>{++}
