--- a/mu-template/trunk/after/template/docbk/code.template
+++ b/mu-template/trunk/after/template/docbk/code.template
@@ -3,7 +3,7 @@ VimL:" <code> File Template, Luc Hermitte <hermitte at free.fr>, 30th Oct 2013
 VimL:" hint: <code></code>
 VimL: let s:value_start  = '¡'
 VimL: let s:value_end    = s:value_start
-VimL: let s:marker_open  = '<+'
-VimL: let s:marker_close = '+>'
+VimL: let s:marker_open  = '{+'
+VimL: let s:marker_close = '+}'
 VimL: let s:reindent     = 1
-<code>¡s:Surround(1, '<++>')¡</code>
+<code>¡s:Surround(1, '{++}')¡</code>
