--- a/cpp/trunk/after/template/cpp/internals/formatted-comment.template
+++ b/cpp/trunk/after/template/cpp/internals/formatted-comment.template
@@ -23,7 +23,7 @@ VimL:        else
 VimL:            let line = text
 VimL:        endif
 VimL:        " optional entries are completly surrounded by a placeholder
-VimL:        if has_key(item,"optional") && item.optional
+VimL:        if has_key(item,"optional") && item.optional && match(line, Marker_Txt(".\\{-}"))==-1
 VimL:            let line = Marker_Txt(line)
 VimL:        endif
 VimL:        " special case: @ingroup is put on the /** line
