--- a/mu-template/trunk/after/template/cmake/boost-test.template
+++ b/mu-template/trunk/after/template/cmake/boost-test.template
@@ -4,12 +4,13 @@ VimL:" hint: add_executable+...+add_test
 VimL:"
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
+VimL: let s:reindent     = 1
 VimL: let s:_test_name   = s:Param("test_name", Marker_Txt("UT_TestName"))
-VimL: let s:_test_source = s:Param("test_source", s:_test_name+".cpp")
-VimL: let s:_tested_lib  = s:Param("tested_lib", Marker_Txt("MyProjectLib${CMAKE_DEBUG_POSTFIX}"))
+VimL: debug let s:_test_source = s:Param("test_source", s:_test_name.".cpp")
+VimL: let s:_tested_lib  = s:Param("tested_lib", Marker_Txt("MyProjectLib"))
 ADD_EXECUTABLE(<+s:_test_name+> <+s:_test_source+>)
 TARGET_LINK_LIBRARIES(<+s:_test_name+> 
-    MyProjectLib${CMAKE_DEBUG_POSTFIX}
+    <+s:_tested_lib+>${CMAKE_DEBUG_POSTFIX}
     ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
     )
 ADD_TEST(<+s:_test_name+> <+s:_test_name+>)
