--- a/mu-template/trunk/after/template/c/for.template
+++ b/mu-template/trunk/after/template/c/for.template
@@ -6,6 +6,6 @@ VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1 
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
-for¡C_nl_before_bracket()¡(<+init+>;<+cond+>;<+iteration+>)¡C_nl_before_curlyB()¡{
+for (<+init+>;<+cond+>;<+iteration+>) {
     ¡s:Surround(1, '<+code+>')¡
 }<++>
