--- a/mu-template/trunk/after/template/c/while.template
+++ b/mu-template/trunk/after/template/c/while.template
@@ -6,6 +6,6 @@ VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1 
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
-while¡C_nl_before_bracket()¡(¡substitute(s:Surround(2, '<+cond+>'), '^\_s*\|\_s*$', '', 'g')¡)¡C_nl_before_curlyB()¡{
+while(¡substitute(s:Surround(2, '<+cond+>'), '^\_s*\|\_s*$', '', 'g')¡){
     ¡s:Surround(1, '<+code+>')¡
 }<++>
