--- a/mu-template/trunk/after/template/vim/internals/vim-rc-local.template
+++ b/mu-template/trunk/after/template/vim/internals/vim-rc-local.template
@@ -3,7 +3,8 @@ VimL: "Vim local-vimrc Template File, Luc Hermitte
 VimL: let s:location = fnamemodify(s:path, ':r')
 VimL: " Override s:fn computation for local-vimrc case
 VimL: let s:fn = substitute(s:location,'\(\W\|_\)\+', '_', 'g') 
-VimL: let s:_prj_kind = s:Param('project_kind', [])
+VimL: debug let s:_prj_kind = s:Param('project_kind', {})
+VimL: let g:prj_kind = s:_prj_kind
 let s:k_version = <+001+>
 " Always loaded {{{1
 " Buffer-local Definitions {{{1
@@ -19,13 +20,13 @@ set cpo&vim
 " Avoid local reinclusion }}}2
 
 MuT:  if has_key(s:_prj_kind, 'c') || has_key(s:_prj_kind, 'cpp')
-VimL:     call s:Include('vim-rc-local-ccpp', 'internals')
+VimL:     call s:Include('vim-rc-local-ccpp', 'vim/internals')
 MuT:  endif
 MuT:  if has_key(s:_prj_kind, 'cmake')
-VimL:     call s:Include('vim-rc-local-cmake', 'internals')
+VimL:     call s:Include('vim-rc-local-cmake', 'vim/internals')
 MuT:  endif
-MuT:  if empty(s:prj_kind)
-VimL:     call s:Include('vim-rc-local-default', 'internals')
+MuT:  if empty(s:_prj_kind)
+VimL:     call s:Include('vim-rc-local-default', 'vim/internals')
 MuT:  endif
 
 " ======================[ Other commands {{{2
