--- a/cpp/trunk/after/template/cpp/erase-remove.template
+++ b/cpp/trunk/after/template/cpp/erase-remove.template
@@ -4,6 +4,7 @@ VimL:" hint: erase-remove idiom
 VimL: let s:reindent     = 1
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
+VimL: call s:AddPostExpandCallback('lh#cpp#include#add("<algorithm>")')
 VimL: let s:container = empty(s:Args()) ? s:Surround(1, Marker_Txt('container')): (s:Args()[0])
 <+s:container+>.erase(std::remove<+_if+>(<+s:container+>.begin(), <+s:container+>.end(), <+what+>), <+s:container+>.end());
 VimL: unlet s:container
