--- a/cpp/trunk/after/template/cpp/internals/stream-implementation.template
+++ b/cpp/trunk/after/template/cpp/internals/stream-implementation.template
@@ -1,6 +1,7 @@
 VimL:" $Id$
 VimL:" «stream-implementation» File Template, Luc Hermitte
+VimL: call s:AddPostExpandCallback('lh#cpp#include#add("<'.s:direction.'stream>")')
 {
-VimL: " The space for the second argument is obligatory at the moment.
+VimL: " The space for the second argument is madatory at the moment.
     return ¡s:direction.'s '.s:op¡ <+fields+>;
 }
