--- a/cpp/trunk/after/template/cpp/iss.template
+++ b/cpp/trunk/after/template/cpp/iss.template
@@ -6,6 +6,7 @@ VimL: let s:value_start = '¡'
 VimL: let s:value_end   = s:value_start
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
+VimL: call s:AddPostExpandCallback('lh#cpp#include#add("<sstream>")')
 std::istringstream iss(<++>);
 if (iss >> <++>) {
     <++>
