--- a/cpp/trunk/after/template/cpp/while-getline.template
+++ b/cpp/trunk/after/template/cpp/while-getline.template
@@ -6,6 +6,7 @@ VimL: let s:value_end   = s:value_start
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 VimL: let s:reindent     = 1
+VimL: call s:AddPostExpandCallback('lh#cpp#include#add("<string>")')
 while¡C_nl_before_bracket()¡(std::getline(<+stream+>, <+line+>))¡C_nl_before_curlyB()¡{
     ¡s:Surround(1, '<+code+>')¡
 }<++>
