--- a/mu-template/trunk/after/template/template/post-include.template
+++ b/mu-template/trunk/after/template/template/post-include.template
@@ -5,4 +5,4 @@ VimL: let s:value_start = '¡'
 VimL: let s:value_end   = s:value_start
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
-VimL: call s:Include('post-expand-callback', 'template', 'lh#cpp#include#add("<'.lh#marker#txt('header').'>")')
+VimL: call s:Include('post-expand-callback', 'template', string('lh#cpp#include#add("<'.lh#marker#txt('header').'>")'))
