--- a/cpp/trunk/after/template/cpp/static_assert.template
+++ b/cpp/trunk/after/template/cpp/static_assert.template
@@ -10,5 +10,5 @@ MuT:  if lh#dev#cpp#use_cpp11()
 static_assert(<+s:_condition+>, <+s:_message+>);
 MuT:  else
 BOOST_STATIC_ASSERT(<+s:_condition+>);
-VimL: call s:AddPostExpandCallback(lh#cpp#include#add("<boost/range/static_assert.hpp>"))
+VimL: call s:AddPostExpandCallback(lh#cpp#include#add("<boost/static_assert.hpp>"))
 MuT:  endif
